force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/KimbleOne__ExpenseCategoryTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Expense Category Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Category Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>