force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/fields/KimbleOne__ExpenseCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseCategory__c</fullName>
    <label>Expense Category</label>
    <referenceTo>KimbleOne__ExpenseCategory__c</referenceTo>
    <relationshipLabel>Expense Category Templates</relationshipLabel>
    <relationshipName>ExpenseCategoryTemplates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>