force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/fields/KimbleOne__Location__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>KimbleOne__Location__c</referenceTo>
    <relationshipLabel>Expense Category Templates</relationshipLabel>
    <relationshipName>ExpenseCategoryTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>