force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/fields/KimbleOne__RebillingRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RebillingRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rebilling Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>RebillingRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Category Templates</relationshipLabel>
    <relationshipName>ExpenseCategoryTemplatesRebillingRule</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>