force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/fields/KimbleOne__ReimbursementCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReimbursementCurrencyIsoCode__c</fullName>
    <label>Reimbursement Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>