force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/fields/KimbleOne__ReimbursementRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReimbursementRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reimbursement Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ReimbursementRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Category Templates (Reimbursement Rule)</relationshipLabel>
    <relationshipName>ExpenseCategoryTemplatesReimburseRul</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>