force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/fields/KimbleOne__ResourcedActivityTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resourced Activity Template</label>
    <referenceTo>KimbleOne__ResourcedActivityTemplate__c</referenceTo>
    <relationshipLabel>Expense Category Templates</relationshipLabel>
    <relationshipName>ExpenseCategoryTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>