force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/fields/KimbleOne__RevenueFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueFactor__c</fullName>
    <label>Revenue Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>