force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/validationRules/KimbleOne__GenericCostRateMandatoryForReimburseRule.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__GenericCostRateMandatoryForReimburseRule</fullName>
    <active>true</active>
    <description>Generic Cost Rate (in Base Currency) is mandatory for Reimbursement Rule of Fixed Cost Rate or Cost Addition</description>
    <errorConditionFormula>(KimbleOne__ReimbursementRule__r.KimbleOne__Enum__c = &apos;FixedCostRate&apos;  || KimbleOne__ReimbursementRule__r.KimbleOne__Enum__c = &apos;CostAddition&apos;)  &amp;&amp; ISBLANK(KimbleOne__Location__c) &amp;&amp; ISBLANK(KimbleOne__CostRate__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__CostRate__c</errorDisplayField>
    <errorMessage>Non-localised Cost Rate must be entered if Reimbursement Rule is &quot;Fixed Cost Rate&quot; or &quot;Cost Addition&quot;</errorMessage>
</ValidationRule>