force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/validationRules/KimbleOne__LocalCostRateMandatoryForReimburseRule.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__LocalCostRateMandatoryForReimburseRule</fullName>
    <active>true</active>
    <description>Local Cost Rate (in Reimbursement Currency) is mandatory for Reimbursement Rule of Fixed Cost Rate or Cost Addition</description>
    <errorConditionFormula>(KimbleOne__ReimbursementRule__r.KimbleOne__Enum__c = &apos;FixedCostRate&apos;  || KimbleOne__ReimbursementRule__r.KimbleOne__Enum__c = &apos;CostAddition&apos;)  &amp;&amp; NOT(ISBLANK(KimbleOne__Location__c)) &amp;&amp; (ISBLANK(KimbleOne__ReimbursementCurrencyIsoCode__c) || ISBLANK(KimbleOne__ReimbursementCurrencyCostRate__c))</errorConditionFormula>
    <errorDisplayField>KimbleOne__ReimbursementCurrencyCostRate__c</errorDisplayField>
    <errorMessage>Localised Currency and Cost Rate must be entered if Reimbursement Rule of &quot;Fixed Cost Rate&quot; or &quot;Cost Addition&quot;</errorMessage>
</ValidationRule>