force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/validationRules/KimbleOne__RebillingRuleMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__RebillingRuleMandatory</fullName>
    <active>true</active>
    <description>Rebilling Rule is Mandatory</description>
    <errorConditionFormula>ISBLANK(KimbleOne__RebillingRule__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__RebillingRule__c</errorDisplayField>
    <errorMessage>Rebilling Rule must be entered</errorMessage>
</ValidationRule>