force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/validationRules/KimbleOne__ReimbursementRuleMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ReimbursementRuleMandatory</fullName>
    <active>true</active>
    <description>Reimbursement Rule is Mandatory</description>
    <errorConditionFormula>ISBLANK(KimbleOne__ReimbursementRule__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__ReimbursementRule__c</errorDisplayField>
    <errorMessage>Reimbursement Rule must be entered</errorMessage>
</ValidationRule>