force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/validationRules/KimbleOne__ResourcedActivityTypeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ResourcedActivityTypeMandatory</fullName>
    <active>true</active>
    <description>Resourced Activity Type is Mandatory</description>
    <errorConditionFormula>ISBLANK(KimbleOne__ResourcedActivityType__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__ResourcedActivityType__c</errorDisplayField>
    <errorMessage>Resourced Activity Type must be entered</errorMessage>
</ValidationRule>