force-app/main/default/objects/KimbleOne__ExpenseCategoryTemplate__c/validationRules/KimbleOne__RevenueRateMandatoryForRebillingRule.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__RevenueRateMandatoryForRebillingRule</fullName>
    <active>true</active>
    <description>Revenue Rate is mandatory for Rebilling Rule of Fixed Revenue Rate or Revenue Addition</description>
    <errorConditionFormula>(KimbleOne__RebillingRule__r.KimbleOne__Enum__c = &apos;FixedRevenueRate&apos;  || KimbleOne__RebillingRule__r.KimbleOne__Enum__c = &apos;RevenueAddition&apos;)  &amp;&amp; ISBLANK(KimbleOne__RevenueRate__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__RevenueRate__c</errorDisplayField>
    <errorMessage>Revenue Rate must be entered if Rebilling Rule is &quot;Fixed Revenue Rate&quot; or &quot;Revenue Addition&quot;</errorMessage>
</ValidationRule>